[fix] Fix package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-openai
-nltk
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.7.1+cpu
 sentence-transformers
+openai
 python-dotenv
+nltk
